[package]
name = "ensan"
version = "0.1.1"
license = "MIT"
edition = "2021"
authors = ["Pornpipat Popum <cappy@fyralabs.com>", "Mado <mado@fyralabs.com>"]
categories = ["parsing", "parser-implementations"]
keywords = ["hcl", "parser", "evaluator", "configuration"]
description = "Extended HCL expression evaluator"
repository = "https://github.com/FyraLabs/ensan"
homepage = "https://fyralabs.com"
documentation = "https://docs.rs/ensan"
exclude = ["proc-macro"]

[workspace]
members = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "~0.18"
serde = { version = "~1.0", features = ["derive"] }
serde_yml = ">=0.0.7"
thiserror = "~1"
