[package]
name = "ensan"
version = "0.2.0"
license = "MIT"
edition = "2021"
authors = ["Pornpipat Popum <cappy@fyralabs.com>", "Mado <mado@fyralabs.com>"]
categories = ["parsing", "parser-implementations"]
keywords = ["hcl", "parser", "evaluator", "configuration"]
description = "Extended HCL expression evaluator"
repository = "https://github.com/FyraLabs/ensan"
homepage = "https://fyralabs.com"
documentation = "https://docs.rs/ensan"
exclude = ["proc-macro"]

[workspace]
members = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "~0.18"
serde = { version = "~1.0", features = ["derive"] }
serde_yml = ">=0.0.7"
thiserror = "~1"
ensan-proc-macro = { path = "proc-macro" }
itertools = "0.13.0"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
serde_json = "1.0"
base64 = "0.22"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v5", "v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ensan-benchmarks"
harness = false
