[package]
name = "ensan"
version = "0.2.1"
license = "MIT"
edition = "2021"
authors = ["Pornpipat Popum <cappy@fyralabs.com>", "Mado <mado@fyralabs.com>"]
categories = ["parsing", "parser-implementations"]
keywords = ["hcl", "parser", "evaluator", "configuration"]
description = "Extended HCL expression evaluator"
repository = "https://github.com/FyraLabs/ensan"
homepage = "https://fyralabs.com"
documentation = "https://docs.rs/ensan"
exclude = ["proc-macro"]

[workspace]
members = ["proc-macro"]

[features]
default = ["fn-strings", "fn-encoding", "fn-hashing", "fn-misc", "fn-uuid"]
fn-strings = []
fn-encoding = ["serde_yml", "serde_json", "base64"]
fn-hashing = ["md-5", "sha1", "sha2", "bcrypt"]
fn-misc = []
fn-uuid = ["uuid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "~0.18"
serde = { version = "~1.0", features = ["derive"] }
serde_yml = { version = ">=0.0.7", optional = true }
thiserror = "~1"
ensan-proc-macro = { path = "proc-macro", version = "0.1" }
itertools = "0.13.0"
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
bcrypt = { version = "0.15.1", optional = true }
uuid = { version = "1.8.0", features = ["v5", "v4"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ensan-benchmarks"
harness = false
