[package]
name = "ensan-proc-macro"
version = "0.1.0"
edition = "2021"
description = "Proc macros for the ensan crate"
license = "MIT"
repository = "https://github.com/FyraLabs/ensan"
readme = "../README.md"
keywords = []
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["fold", "full"] }
